@@ -1,22 +1,20 @@
 package gov.nysenate.openleg.api.legislation.bill;
 
-import gov.nysenate.openleg.api.response.BaseResponse;
-import gov.nysenate.openleg.api.response.ListViewResponse;
-import gov.nysenate.openleg.api.search.view.SearchResultView;
+import gov.nysenate.openleg.api.BaseCtrl;
 import gov.nysenate.openleg.api.legislation.bill.view.BillIdView;
 import gov.nysenate.openleg.api.legislation.bill.view.BillInfoView;
 import gov.nysenate.openleg.api.legislation.bill.view.BillView;
-import gov.nysenate.openleg.api.BaseCtrl;
+import gov.nysenate.openleg.api.response.BaseResponse;
+import gov.nysenate.openleg.api.response.ListViewResponse;
+import gov.nysenate.openleg.api.search.view.SearchResultView;
 import gov.nysenate.openleg.common.dao.LimitOffset;
 import gov.nysenate.openleg.legislation.SessionYear;
 import gov.nysenate.openleg.legislation.bill.BaseBillId;
 import gov.nysenate.openleg.legislation.bill.BillTextFormat;
+import gov.nysenate.openleg.legislation.bill.dao.service.BillDataService;
 import gov.nysenate.openleg.search.SearchException;
 import gov.nysenate.openleg.search.SearchResults;
-import gov.nysenate.openleg.legislation.bill.dao.service.BillDataService;
 import gov.nysenate.openleg.search.bill.BillSearchService;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.context.request.WebRequest;
@@ -24,7 +22,6 @@ import org.springframework.web.context.request.WebRequest;
 import java.util.Set;
 
 import static gov.nysenate.openleg.api.BaseCtrl.BASE_API_PATH;
-import static java.util.stream.Collectors.toList;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 
 /**
@@ -32,12 +29,15 @@ import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
  */
 @RestController
 @RequestMapping(value = BASE_API_PATH + "/bills", method = RequestMethod.GET, produces = APPLICATION_JSON_VALUE)
-public class BillSearchCtrl extends BaseCtrl
-{
-    private static final Logger logger = LoggerFactory.getLogger(BillSearchCtrl.class);
+public class BillSearchCtrl extends BaseCtrl {
+    private final BillDataService billData;
+    private final BillSearchService billSearch;
 
-    @Autowired protected BillDataService billData;
-    @Autowired protected BillSearchService billSearch;
+    @Autowired
+    public BillSearchCtrl(BillDataService billData, BillSearchService billSearch) {
+        this.billData = billData;
+        this.billSearch = billSearch;
+    }
 
     /**
      * Bill Search API
@@ -90,12 +90,12 @@ public class BillSearchCtrl extends BaseCtrl
                                                WebRequest request) {
         Set<BillTextFormat> fullTextFormats = getFullTextFormats(request);
         return ListViewResponse.of(
-            results.getResults().stream()
+            results.resultList().stream()
                 .map(r -> new SearchResultView((full)
-                        ? new BillView(billData.getBill(r.getResult()), fullTextFormats)
+                        ? new BillView(billData.getBill(r.result()), fullTextFormats)
                         : (idOnly)
-                            ? new BillIdView(r.getResult())
-                            : new BillInfoView(billData.getBillInfo(r.getResult())), r.getRank(), r.getHighlights()))
-                .collect(toList()), results.getTotalResults(), limOff);
+                            ? new BillIdView(r.result())
+                            : new BillInfoView(billData.getBillInfo(r.result())), r.rank(), r.highlights()))
+                .toList(), results.totalResults(), limOff);
     }
 }
