@@ -38,8 +38,7 @@ public class BillVoteView implements ViewObject
                     .collect(Collectors.toMap(BillVoteCode::name, voteCode ->
                         ListView.of(billVote.getMembersByVote(voteCode).stream()
                             .map(MemberView::new)
-                            .sorted(Comparator.comparing(MemberView::getShortName))
-                            .collect(Collectors.toList()))))
+                            .sorted(Comparator.comparing(MemberView::getShortName)).toList())))
             );
             this.attendance = billVote.getAttendance() == null ? null : new SenateVoteAttendanceView(billVote.getAttendance());
         }
