@@ -1,34 +1,36 @@
 package gov.nysenate.openleg.api.updates.transcripts.session;
 
 import com.google.common.collect.Range;
+import gov.nysenate.openleg.api.BaseCtrl;
 import gov.nysenate.openleg.api.response.BaseResponse;
 import gov.nysenate.openleg.api.response.ListViewResponse;
-import gov.nysenate.openleg.api.BaseCtrl;
 import gov.nysenate.openleg.common.dao.LimitOffset;
 import gov.nysenate.openleg.common.dao.PaginatedList;
 import gov.nysenate.openleg.common.dao.SortOrder;
+import gov.nysenate.openleg.common.util.DateUtils;
 import gov.nysenate.openleg.legislation.transcripts.session.dao.TranscriptDao;
 import gov.nysenate.openleg.updates.transcripts.session.TranscriptUpdateToken;
-import gov.nysenate.openleg.common.util.DateUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.context.request.WebRequest;
 
 import java.time.LocalDateTime;
-import java.util.stream.Collectors;
 
 import static gov.nysenate.openleg.api.BaseCtrl.BASE_API_PATH;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 
 @RestController
 @RequestMapping(value = BASE_API_PATH + "/transcripts", method = RequestMethod.GET, produces = APPLICATION_JSON_VALUE)
-public class TranscriptUpdatesCtrl extends BaseCtrl
-{
-    private static final Logger logger = LoggerFactory.getLogger(TranscriptUpdatesCtrl.class);
+public class TranscriptUpdatesCtrl extends BaseCtrl {
+    private final TranscriptDao transcriptDao;
 
-    @Autowired private TranscriptDao transcriptDao;
+    @Autowired
+    public TranscriptUpdatesCtrl(TranscriptDao transcriptDao) {
+        this.transcriptDao = transcriptDao;
+    }
 
     /**
      * Transcript Updates API
@@ -51,13 +53,13 @@ public class TranscriptUpdatesCtrl extends BaseCtrl
 
     @RequestMapping(value = "/updates")
     public BaseResponse getNewRecentTranscripts(WebRequest request) {
-        return getNewTranscriptsDuring(LocalDateTime.now().minusDays(7), DateUtils.THE_FUTURE.atStartOfDay(), request);
+        return getNewTranscriptsDuring(LocalDateTime.now().minusDays(7), DateUtils.THE_FUTURE, request);
     }
 
     @RequestMapping(value = "/updates/{from:.*\\.?.*}")
     public BaseResponse getNewTranscriptsSince(@PathVariable String from, WebRequest request) {
         LocalDateTime fromDateTime = parseISODateTime(from, "from");
-        return getNewTranscriptsDuring(fromDateTime, DateUtils.THE_FUTURE.atStartOfDay(), request);
+        return getNewTranscriptsDuring(fromDateTime, DateUtils.THE_FUTURE, request);
     }
 
     @RequestMapping(value = "/updates/{from:.*\\.?.*}/{to:.*\\.?.*}")
@@ -73,8 +75,8 @@ public class TranscriptUpdatesCtrl extends BaseCtrl
         LimitOffset limOff = getLimitOffset(request, 25);
         Range<LocalDateTime> range = getOpenRange(from, to, "from", "to");
         PaginatedList<TranscriptUpdateToken> updates = transcriptDao.transcriptsUpdatedDuring(range, SortOrder.ASC, limOff);
-        return ListViewResponse.of(updates.getResults().stream()
+        return ListViewResponse.of(updates.results().stream()
                 .map(TranscriptUpdateTokenView::new)
-                .collect(Collectors.toList()), updates.getTotal(), limOff);
+                .toList(), updates.total(), limOff);
     }
 }
