@@ -1,9 +1,9 @@
 package gov.nysenate.openleg.spotchecks.openleg.agenda;
 
 import com.google.common.collect.ImmutableMap;
+import gov.nysenate.openleg.api.BaseCtrl;
 import gov.nysenate.openleg.api.legislation.agenda.view.AgendaSummaryView;
 import gov.nysenate.openleg.api.legislation.agenda.view.AgendaView;
-import gov.nysenate.openleg.api.BaseCtrl;
 import gov.nysenate.openleg.common.dao.LimitOffset;
 import gov.nysenate.openleg.common.dao.PaginatedList;
 import gov.nysenate.openleg.legislation.agenda.AgendaId;
@@ -16,7 +16,6 @@ import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Repository
 public class JsonOpenlegAgendaDao implements OpenlegAgendaDao {
@@ -41,11 +40,11 @@ public class JsonOpenlegAgendaDao implements OpenlegAgendaDao {
         PaginatedList<AgendaSummaryView> agendaSummaries =
                 jsonOpenlegDaoUtils.queryForViewObjects(AgendaSummaryView.class, agendasForYearUri, LimitOffset.ALL);
 
-        return agendaSummaries.getResults().stream()
+        return agendaSummaries.results().stream()
                 .map(AgendaSummaryView::getId)
-                .map(aiv -> new AgendaId(aiv.getNumber(), aiv.getYear()))
+                .map(aiv -> new AgendaId(aiv.number(), aiv.year()))
                 .map(this::getAgendaView)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
