@@ -1,37 +1,34 @@
 package gov.nysenate.openleg.spotchecks.scraping.lrs.bill.ctrl;
 
+import gov.nysenate.openleg.api.BaseCtrl;
+import gov.nysenate.openleg.api.legislation.bill.view.BaseBillIdView;
 import gov.nysenate.openleg.api.response.BaseResponse;
 import gov.nysenate.openleg.api.response.ListViewResponse;
 import gov.nysenate.openleg.api.response.ViewObjectResponse;
-import gov.nysenate.openleg.api.legislation.bill.view.BaseBillIdView;
 import gov.nysenate.openleg.api.spotcheck.view.BillScrapeQueueEntryView;
-import gov.nysenate.openleg.api.BaseCtrl;
 import gov.nysenate.openleg.common.dao.LimitOffset;
 import gov.nysenate.openleg.common.dao.PaginatedList;
 import gov.nysenate.openleg.common.dao.SortOrder;
-import gov.nysenate.openleg.spotchecks.scraping.lrs.bill.BillScrapeReferenceDao;
 import gov.nysenate.openleg.legislation.bill.BaseBillId;
 import gov.nysenate.openleg.spotchecks.scraping.lrs.bill.BillScrapeQueueEntry;
+import gov.nysenate.openleg.spotchecks.scraping.lrs.bill.BillScrapeReferenceDao;
 import gov.nysenate.openleg.spotchecks.scraping.lrs.bill.ScrapeQueuePriority;
 import org.apache.shiro.authz.annotation.RequiresPermissions;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.context.request.WebRequest;
 
-import java.util.stream.Collectors;
-
-import static gov.nysenate.openleg.api.BaseCtrl.*;
+import static gov.nysenate.openleg.api.BaseCtrl.BASE_ADMIN_API_PATH;
 
 @RestController
 @RequestMapping(value = BASE_ADMIN_API_PATH + "/scraping/billqueue")
-public class BillScrapeQueueCtrl extends BaseCtrl
-{
-    private static final Logger logger = LoggerFactory.getLogger(BillScrapeQueueCtrl.class);
+public class BillScrapeQueueCtrl extends BaseCtrl {
+    private final BillScrapeReferenceDao btrDao;
 
     @Autowired
-    private BillScrapeReferenceDao btrDao;
+    public BillScrapeQueueCtrl(BillScrapeReferenceDao btrDao) {
+        this.btrDao = btrDao;
+    }
 
     /**
      * Get Scrape Queue API
@@ -50,10 +47,10 @@ public class BillScrapeQueueCtrl extends BaseCtrl
         SortOrder order = getSortOrder(request, SortOrder.DESC);
         PaginatedList<BillScrapeQueueEntry> results = btrDao.getScrapeQueue(limitOffset, order);
         return ListViewResponse.of(
-                results.getResults().stream()
+                results.results().stream()
                         .map(BillScrapeQueueEntryView::new)
-                        .collect(Collectors.toList()),
-                results.getTotal(), results.getLimOff()
+                        .toList(),
+                results.total(), results.limOff()
         );
     }
 
@@ -87,7 +84,7 @@ public class BillScrapeQueueCtrl extends BaseCtrl
      */
     @RequiresPermissions("admin:view")
     @RequestMapping(value = "/{sessionYear}/{printNo}", method = RequestMethod.DELETE)
-    public BaseResponse removeBillfromScrapeQueue(@PathVariable int sessionYear,
+    public BaseResponse removeBillFromScrapeQueue(@PathVariable int sessionYear,
                                                   @PathVariable String printNo) {
         BaseBillId baseBillId = getBaseBillId(printNo, sessionYear, "printNo");
         btrDao.deleteBillFromScrapeQueue(baseBillId);
