@@ -2,13 +2,13 @@ package gov.nysenate.openleg.spotchecks.sensite.calendar;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import gov.nysenate.openleg.legislation.SessionYear;
-import gov.nysenate.openleg.legislation.bill.Version;
 import gov.nysenate.openleg.legislation.bill.BillId;
+import gov.nysenate.openleg.legislation.bill.Version;
 import gov.nysenate.openleg.legislation.calendar.CalendarId;
 import gov.nysenate.openleg.legislation.calendar.CalendarType;
+import gov.nysenate.openleg.processors.ParseError;
 import gov.nysenate.openleg.spotchecks.sensite.SenateSiteDump;
 import gov.nysenate.openleg.spotchecks.sensite.SenateSiteDumpFragment;
-import gov.nysenate.openleg.processors.ParseError;
 import gov.nysenate.openleg.spotchecks.sensite.SenateSiteJsonParser;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
@@ -17,7 +17,6 @@ import java.io.IOException;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 /**
  * Created by PKS on 2/25/16.
@@ -29,7 +28,7 @@ public class CalendarJsonParser extends SenateSiteJsonParser {
     public List<SenateSiteCalendar> parseCalendars(SenateSiteDump calendarDump) throws ParseError {
         return calendarDump.getDumpFragments().stream()
                 .flatMap(fragment -> extractCalendarsFromFragment(fragment).stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<SenateSiteCalendar> extractCalendarsFromFragment(SenateSiteDumpFragment fragment) throws ParseError {
@@ -59,7 +58,7 @@ public class CalendarJsonParser extends SenateSiteJsonParser {
 
     private SenateSiteCalendar extractSenSiteCalendar(JsonNode subCalNode, CalendarId calendarId,
                                                       SenateSiteDumpFragment fragment) throws IOException {
-        SenateSiteCalendar calendar = new SenateSiteCalendar(fragment.getDumpId().getDumpTime());
+        SenateSiteCalendar calendar = new SenateSiteCalendar(fragment.getDumpId().dumpTime());
 
         calendar.setBillCalNumbers(getIntListValue(subCalNode, "field_ol_bill_cal_number"));
         calendar.setCalendarType(getCalendarType(getValue(subCalNode,"field_ol_type")));
@@ -84,7 +83,7 @@ public class CalendarJsonParser extends SenateSiteJsonParser {
     }
 
     private List<BillId> getBillId(List<String> billNos, int year){
-        List<BillId> billId = billNos.stream().map(billNo -> new BillId(billNo, SessionYear.of(year))).collect(Collectors.toList());
+        List<BillId> billId = billNos.stream().map(billNo -> new BillId(billNo, SessionYear.of(year))).toList();
         return billId;
     }
 
