@@ -1,7 +1,6 @@
 package gov.nysenate.openleg.spotchecks;
 
 import com.google.common.base.Stopwatch;
-import com.google.common.collect.Sets;
 import gov.nysenate.openleg.BaseTests;
 import gov.nysenate.openleg.common.dao.LimitOffset;
 import gov.nysenate.openleg.config.annotation.IntegrationTest;
@@ -19,18 +18,16 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
 
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.*;
+import static org.junit.Assert.*;
 
 @Category(IntegrationTest.class)
 public class SpotcheckReportDaoIT extends BaseTests {
-
     private static final Logger logger = LoggerFactory.getLogger(SpotcheckReportDaoIT.class);
+    // A bill that only exists this test world.
+    private static final BaseBillId billId = new BaseBillId("S999999", 2017);
 
     @Autowired
     private SpotCheckReportDao reportDao;
-    private BaseBillId billId = new BaseBillId("S999999", 2017); // A bill that only exists this test world.
     private LocalDateTime start;
 
     @Before
@@ -45,34 +42,31 @@ public class SpotcheckReportDaoIT extends BaseTests {
     @Test
     public void testSaveNewMismatch() {
         reportDao.saveReport(createMismatchReport(start));
-
-        DeNormSpotCheckMismatch actual = queryMostRecentOpenMismatch();
-        assertThat(actual.getKey(), is(billId));
-        assertThat(actual.getState(), is(MismatchState.OPEN));
+        DeNormSpotCheckMismatch<?> actual = queryMostRecentOpenMismatch();
+        assertEquals(billId, actual.getKey());
+        assertEquals(MismatchState.OPEN, actual.getState());
     }
 
     @Test
     public void testSaveExistingMismatch() {
         // Save new mismatch
         reportDao.saveReport(createMismatchReport(start));
-        DeNormSpotCheckMismatch newMismatch = queryMostRecentOpenMismatch();
+        DeNormSpotCheckMismatch<?> newMismatch = queryMostRecentOpenMismatch();
         // Save same mismatch again
         reportDao.saveReport(createMismatchReport(start.plusMinutes(1)));
-        DeNormSpotCheckMismatch existingMismatch = queryMostRecentOpenMismatch();
-
-        assertThat(existingMismatch.getFirstSeenDateTime(), is(newMismatch.getFirstSeenDateTime()));
+        DeNormSpotCheckMismatch<?> existingMismatch = queryMostRecentOpenMismatch();
+        assertEquals(newMismatch.getFirstSeenDateTime(), existingMismatch.getFirstSeenDateTime());
     }
 
     @Test
     public void testSaveClosedMismatch() {
         reportDao.saveReport(createMismatchReport(start));
-        DeNormSpotCheckMismatch newMismatch = queryMostRecentOpenMismatch();
+        DeNormSpotCheckMismatch<?> newMismatch = queryMostRecentOpenMismatch();
         // Then save report without a mismatch
         reportDao.saveReport(createEmptyReport(start.plusMinutes(1)));
-        DeNormSpotCheckMismatch closedMismatch = queryMostRecentClosedMismatch();
-
-        assertThat(closedMismatch.getState(), is(MismatchState.CLOSED));
-        assertThat(closedMismatch.getFirstSeenDateTime(), is(newMismatch.getFirstSeenDateTime()));
+        DeNormSpotCheckMismatch<?> closedMismatch = queryMostRecentClosedMismatch();
+        assertEquals(MismatchState.CLOSED, closedMismatch.getState());
+        assertEquals(newMismatch.getFirstSeenDateTime(), closedMismatch.getFirstSeenDateTime());
     }
 
     @Test
@@ -81,13 +75,12 @@ public class SpotcheckReportDaoIT extends BaseTests {
         reportDao.saveReport(createMismatchReport(start));
         // Resolve the mismatch
         reportDao.saveReport(createEmptyReport(start.plusMinutes(1)));
-        DeNormSpotCheckMismatch closedMismatch = queryMostRecentClosedMismatch();
+        DeNormSpotCheckMismatch<?> closedMismatch = queryMostRecentClosedMismatch();
         // Encounter it again
         reportDao.saveReport(createMismatchReport(start.plusMinutes(2)));
-        DeNormSpotCheckMismatch regressionMismatch = queryMostRecentOpenMismatch();
-
-        assertThat(regressionMismatch.getState(), is(MismatchState.OPEN));
-        assertThat(regressionMismatch.getFirstSeenDateTime(), is(not(closedMismatch.getFirstSeenDateTime())));
+        DeNormSpotCheckMismatch<?> regressionMismatch = queryMostRecentOpenMismatch();
+        assertEquals(MismatchState.OPEN, regressionMismatch.getState());
+        assertNotEquals(closedMismatch.getFirstSeenDateTime(), regressionMismatch.getFirstSeenDateTime());
     }
 
     /**
@@ -102,10 +95,10 @@ public class SpotcheckReportDaoIT extends BaseTests {
     @Test
     public void canUpdateIgnoreStatus() {
         reportDao.saveReport(createMismatchReport(start));
-        DeNormSpotCheckMismatch mismatch = queryMostRecentOpenMismatch();
+        DeNormSpotCheckMismatch<?> mismatch = queryMostRecentOpenMismatch();
         reportDao.setMismatchIgnoreStatus(mismatch.getMismatchId(), SpotCheckMismatchIgnore.IGNORE_PERMANENTLY);
-        DeNormSpotCheckMismatch actual = queryMostRecentOpenMismatch();
-        assertThat(actual.getIgnoreStatus(), is(SpotCheckMismatchIgnore.IGNORE_PERMANENTLY));
+        DeNormSpotCheckMismatch<?> actual = queryMostRecentOpenMismatch();
+        assertEquals(SpotCheckMismatchIgnore.IGNORE_PERMANENTLY, actual.getIgnoreStatus());
     }
 
     /**
@@ -113,11 +106,12 @@ public class SpotcheckReportDaoIT extends BaseTests {
      */
     @Test
     public void canAddIssueId() {
+        final String issueId = "10800";
         reportDao.saveReport(createMismatchReport(start));
-        DeNormSpotCheckMismatch mismatch = queryMostRecentOpenMismatch();
-        reportDao.addIssueId(mismatch.getMismatchId(), "10800");
+        DeNormSpotCheckMismatch<?> mismatch = queryMostRecentOpenMismatch();
+        reportDao.addIssueId(mismatch.getMismatchId(), issueId);
         Set<String> actual = queryMostRecentOpenMismatch().getIssueIds();
-        assertThat(actual, contains("10800"));
+        assertTrue(actual.contains(issueId));
     }
 
     @Test
@@ -125,67 +119,67 @@ public class SpotcheckReportDaoIT extends BaseTests {
         String issueId = "10800";
         String otherIssueId = "10899";
         reportDao.saveReport(createMismatchReport(start));
-        DeNormSpotCheckMismatch mismatch = queryMostRecentOpenMismatch();
+        DeNormSpotCheckMismatch<?> mismatch = queryMostRecentOpenMismatch();
         reportDao.addIssueId(mismatch.getMismatchId(), issueId);
         reportDao.addIssueId(mismatch.getMismatchId(), otherIssueId);
         Set<String> actual = queryMostRecentOpenMismatch().getIssueIds();
-        assertThat(actual, containsInAnyOrder(issueId, otherIssueId));
+        assertTrue(actual.contains(issueId));
+        assertTrue(actual.contains(otherIssueId));
     }
 
     @Test
     public void duplicateIssuesNotSaved() {
         String issueId = "10800";
         reportDao.saveReport(createMismatchReport(start));
-        DeNormSpotCheckMismatch mismatch = queryMostRecentOpenMismatch();
+        DeNormSpotCheckMismatch<?> mismatch = queryMostRecentOpenMismatch();
         reportDao.addIssueId(mismatch.getMismatchId(), issueId);
         reportDao.addIssueId(mismatch.getMismatchId(), issueId);
         Set<String> actual = queryMostRecentOpenMismatch().getIssueIds();
-        assertThat(actual, is(Sets.newHashSet(issueId)));
+        assertEquals(actual, Set.of(issueId));
     }
 
     @Test
     public void canDeleteIssueIds() {
         String issueId = "10800";
         reportDao.saveReport(createMismatchReport(start));
-        DeNormSpotCheckMismatch mismatch = queryMostRecentOpenMismatch();
+        DeNormSpotCheckMismatch<?> mismatch = queryMostRecentOpenMismatch();
         reportDao.addIssueId(mismatch.getMismatchId(), issueId);
         reportDao.deleteIssueId(mismatch.getMismatchId(), issueId);
         Set<String> actual = queryMostRecentOpenMismatch().getIssueIds();
-        assertThat(actual, is(empty()));
+        assertTrue(actual.isEmpty());
     }
 
     /** Summary query tests */
 
     @Test
     public void canGetStatusSummary() {
-        MismatchStatusSummary summary = reportDao.getMismatchStatusSummary(LocalDate.now(), SpotCheckDataSource.LBDC,
-                SpotCheckContentType.BILL,
-                Sets.immutableEnumSet(SpotCheckMismatchIgnore.NOT_IGNORED));
+        reportDao.getMismatchStatusSummary(LocalDate.now(), SpotCheckDataSource.LBDC,
+                SpotCheckContentType.BILL, Set.of(SpotCheckMismatchIgnore.NOT_IGNORED));
     }
 
     @Test
     public void canGetMismatchTypeSummary() {
-        MismatchTypeSummary summary = reportDao.getMismatchTypeSummary(LocalDate.now(), SpotCheckDataSource.LBDC,
-                                                                       SpotCheckContentType.BILL,
-                                                                       MismatchStatus.EXISTING,
-                                                                       Sets.immutableEnumSet(SpotCheckMismatchIgnore.NOT_IGNORED));
+        reportDao.getMismatchTypeSummary(LocalDate.now(), SpotCheckDataSource.LBDC,
+                SpotCheckContentType.BILL, MismatchStatus.EXISTING,
+                Set.of(SpotCheckMismatchIgnore.NOT_IGNORED));
     }
 
     @Test
     public void canGetContentTypeSummary() {
-        MismatchContentTypeSummary summary = reportDao.getMismatchContentTypeSummary(LocalDate.now(), SpotCheckDataSource.LBDC,
-                Sets.immutableEnumSet(SpotCheckMismatchIgnore.NOT_IGNORED));
+        reportDao.getMismatchContentTypeSummary(LocalDate.now(), SpotCheckDataSource.LBDC,
+                Set.of(SpotCheckMismatchIgnore.NOT_IGNORED));
     }
 
     @Test
     public void massiveSaveTest() {
         int session = 2017;
 
-        SpotCheckReportId reportId = new SpotCheckReportId(SpotCheckRefType.LBDC_DAYBREAK, LocalDateTime.now(), LocalDateTime.now());
+        SpotCheckReportId reportId = new SpotCheckReportId(SpotCheckRefType.LBDC_DAYBREAK,
+                LocalDateTime.now(), LocalDateTime.now());
         SpotCheckReport<BaseBillId> report = new SpotCheckReport<>(reportId);
 
         List<BaseBillId> baseBillIds = new ArrayList<>();
-        for (int i = 0; i < 4000; i++) {
+        for (int i = 2; i < 400; i++) {
             String house = i % 2 == 0 ? "S" : "A";
             String printNo = house + i / 2;
             BaseBillId baseBillId = new BaseBillId(printNo, session);
@@ -194,10 +188,11 @@ public class SpotcheckReportDaoIT extends BaseTests {
 
         Random rando = new Random(1234567890);
 
-        List<SpotCheckMismatchType> typeList = new ArrayList<>(SpotCheckMismatchType.getMismatchTypes(reportId.getReferenceType()));
+        var typeList = new ArrayList<>(SpotCheckMismatchType.
+                getMismatchTypes(reportId.getReferenceType()));
         baseBillIds.stream()
                 .map(baseBillId -> {
-                    SpotCheckObservation<BaseBillId> obs = new SpotCheckObservation<>(reportId.getReferenceId(), baseBillId);
+                    var obs = new SpotCheckObservation<>(reportId.getReferenceId(), baseBillId);
                     while (rando.nextInt(10) == 0) {
                         SpotCheckMismatchType type = typeList.get(rando.nextInt(typeList.size()));
                         obs.addMismatch(new SpotCheckMismatch(type, "D:", ":D"));
@@ -205,7 +200,8 @@ public class SpotcheckReportDaoIT extends BaseTests {
                     return obs;
                 })
                 .forEach(report::addObservation);
-        logger.info("Saving report, {} obs, {} mm", report.getObservedCount(), report.getOpenMismatchCount(false));
+        logger.info("Saving report, {} obs, {} mm", report.getObservedCount(),
+                report.getOpenMismatchCount(false));
         Stopwatch sw = Stopwatch.createStarted();
         reportDao.saveReport(report);
         logger.info("done {}", sw.stop());
@@ -215,35 +211,38 @@ public class SpotcheckReportDaoIT extends BaseTests {
 
     private DeNormSpotCheckMismatch<?> queryMostRecentOpenMismatch() {
         MismatchQuery query = new MismatchQuery(start.toLocalDate(), SpotCheckDataSource.LBDC,
-                                                MismatchStatus.OPEN, Collections.singleton(SpotCheckContentType.BILL));
-        return reportDao.getMismatches(query, LimitOffset.ALL).getResults().get(0);
+                MismatchStatus.OPEN, Set.of(SpotCheckContentType.BILL));
+        return reportDao.getMismatches(query, LimitOffset.ALL).results().get(0);
     }
 
-    private DeNormSpotCheckMismatch queryMostRecentClosedMismatch() {
+    private DeNormSpotCheckMismatch<?> queryMostRecentClosedMismatch() {
         MismatchQuery query = new MismatchQuery(start.toLocalDate(), SpotCheckDataSource.LBDC,
                 MismatchStatus.RESOLVED, Collections.singleton(SpotCheckContentType.BILL));
-        return reportDao.getMismatches(query, LimitOffset.ALL).getResults().get(0);
+        return reportDao.getMismatches(query, LimitOffset.ALL).results().get(0);
     }
 
-    private SpotCheckReport createMismatchReport(LocalDateTime refDateTime) {
+    private static SpotCheckReport<BaseBillId> createMismatchReport(LocalDateTime refDateTime) {
         return createMismatchReport(refDateTime, SpotCheckMismatchIgnore.NOT_IGNORED);
     }
 
-    private SpotCheckReport createMismatchReport(LocalDateTime refDateTime, SpotCheckMismatchIgnore ignoreStatus) {
-        SpotCheckReportId reportId = new SpotCheckReportId(SpotCheckRefType.LBDC_DAYBREAK, refDateTime, LocalDateTime.now());
+    private static SpotCheckReport<BaseBillId> createMismatchReport(LocalDateTime refDateTime, SpotCheckMismatchIgnore ignoreStatus) {
+        SpotCheckReportId reportId = new SpotCheckReportId(SpotCheckRefType.LBDC_DAYBREAK,
+                refDateTime, LocalDateTime.now());
         SpotCheckReport<BaseBillId> report = new SpotCheckReport<>();
         report.setReportId(reportId);
         SpotCheckObservation<BaseBillId> ob = new SpotCheckObservation<>(
                 new SpotCheckReferenceId(SpotCheckRefType.LBDC_DAYBREAK, refDateTime), billId);
-        SpotCheckMismatch mm = new SpotCheckMismatch(SpotCheckMismatchType.BILL_COSPONSOR, "ObservedSponsor", "ReferenceSponsor");
+        SpotCheckMismatch mm = new SpotCheckMismatch(SpotCheckMismatchType.BILL_COSPONSOR,
+                "ObservedSponsor", "ReferenceSponsor");
         mm.setIgnoreStatus(ignoreStatus);
         ob.addMismatch(mm);
         report.addObservation(ob);
         return report;
     }
 
-    private SpotCheckReport createEmptyReport(LocalDateTime refDateTime)  {
-        SpotCheckReportId reportId = new SpotCheckReportId(SpotCheckRefType.LBDC_DAYBREAK, refDateTime, LocalDateTime.now());
+    private static SpotCheckReport<BaseBillId> createEmptyReport(LocalDateTime refDateTime)  {
+        SpotCheckReportId reportId = new SpotCheckReportId(SpotCheckRefType.LBDC_DAYBREAK,
+                refDateTime, LocalDateTime.now());
         SpotCheckReport<BaseBillId> report = new SpotCheckReport<>();
         report.setReportId(reportId);
         SpotCheckObservation<BaseBillId> ob = new SpotCheckObservation<>(
